# AI-Indian-Recipe-Generator

./: .gitattributes  .gitignore  .hfignore  README.md  app.py  artifacts.dvc  model_card_draft.md  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
app/: app.py  inference.py  ingredient_data.py  output_parser.py  styles.css
data/processed/: candidate_baseline_comparison.csv  llama3_1b_base_metrics.json  llama3_1b_base_prompts.json  llama3_3b_base_metrics.json  llama3_3b_base_prompts.json  llama3_3b_finetuned_metrics.json  llama3_3b_finetuned_prompts.json  phi3_mini_base_metrics.json  phi3_mini_base_prompts.json  test.csv
models/: base_llama2.py  base_llama3.py  base_mistral.py  train_llama3.py
models/base_utils/: common_utils.py
models/prompts/: prompts.py
models/trained/checkpoint-612/: trainer_state.json
models/trained/final/: adapter_config.json
notebooks/: phase2_evaluation_kaggle.py  phase3_training_kaggle.py  phase3_training_runpod_a100.py
scripts/: download_data.py  eda.py
scripts/evaluation/: evaluate.py  evaluate_finetuned.py  metrics.py  parser.py  recompute_metrics.py
scripts/pipeline/: filter_data.py  format_prompts.py  merge_and_clean.py  split_dataset.py
tests/: test_parser.py
