[project]
name = "ai-indian-recipe-generator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "gradio>=5.0",
    "mlflow>=3.11.1",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "peft>=0.19.1",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
